--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <canvas id="visualization"></canvas>
     </main>
     <footer>
-      <p>Powered by <a href="https://github.com/your-repo" target="_blank">Your GitHub Repo</a></p>
+      <p>Powered by <a href="https://github.com/your-repo" target="_blank">MrPiratage's Github Repo</a></p>
     </footer>
   </div>
   <script src="scripts.js"></script>
